@@ -19,6 +19,7 @@ debsig-verify (0.14) UNRELEASED; urgency=low
   * Set umask() for mkstemp() calls.
   * Do not free() nor unlink() an uninitialized string.
   * Fix printing debug message on unmatched key IDs in getKeyID().
+  * Update copyright years.
 
  -- Guillem Jover <guillem@debian.org>  Fri, 31 Oct 2014 00:01:39 +0100
 
